.provarCaches/00D410000011HE0EAM/objects/rstkf__glclose__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glclose</customHelpPage>
    <description>glclose__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glclose_glyear__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__glclose_reportingcompany__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstkf__glclose_reportingperiod__c ) &amp; &apos;_&apos; &amp;  rstkf__glclose_subsidiary__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__glclose_subsidiaryperiod__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__glclose_glyear__r.Name &amp; &apos;-&apos; &amp; rstkf__glclose_reportingcompany__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;-Pd-&apos; &amp;  TEXT(rstkf__glclose_reportingperiod__c) &amp; &apos;-&apos; &amp; rstkf__glclose_subsidiary__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c  &amp; &apos;-Pd-&apos; &amp; TEXT( rstkf__glclose_subsidiaryperiod__c)), 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bookedearningsamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bookedxlateddiff__c</fullName>
        <label>Amount Of Currency Gain/Loss Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bsexchratesched__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Balance Sheet Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Financial Period Close (Balance sheet rate schedule)</relationshipLabel>
        <relationshipName>glcloses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bsovrrideby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Balance Sheet Rate Overridden By</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Financial Period Close (Balance sheet rate overridden by)</relationshipLabel>
        <relationshipName>glcloses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bsovrridedate__c</fullName>
        <label>Balance Sheet Rate Overridden On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bsovrriderate__c</fullName>
        <label>Balance Sheet Rate As Overridden</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_bsrateovrridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Sheet Rate Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budexchratesched__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Budget Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Financial Period Close (Budget exchange rate schedule)</relationshipLabel>
        <relationshipName>glcloses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budgetexists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subsidiary Has Budget Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budlastchanged__c</fullName>
        <label>Date Budget Last Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budovrrideby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Budget Exchange Rate Overridden By</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Financial Period Close (Budget exchange rate overridden by)</relationshipLabel>
        <relationshipName>glcloses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budovrridedate__c</fullName>
        <label>Budget Exchange Rate Overridden On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budovrriderate__c</fullName>
        <label>Override Budget Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budrateeqglrate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Exchange Rate Equals GL Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_budrateovrridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Exchange Rate Is Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_gexchdiffbooked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gain/Loss On Translation Booked To GLTxn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glcurrentearnings__c</fullName>
        <label>Calculated Balance Sheet Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glearningsbooked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glearningspostdate__c</fullName>
        <label>Z_OBSOLETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glexchdiffpostdate__c</fullName>
        <label>Gain/Loss Translation Booked To GLTxn On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_gllastbooked__c</fullName>
        <label>Date GL Txn Last Inserted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_gltxnsts__c</fullName>
        <inlineHelpText>This system field indicates the completion state of the multi-company consolidation related update of subsidiary GL transactions. It is intended only for internal processing use.</inlineHelpText>
        <label>Consolidation GL Txn Update Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glxlatediff__c</fullName>
        <label>Gain/Loss On Currency Translation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glxlatediffset__c</fullName>
        <label>Gain/Loss On Translation Set On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glcloses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_multicurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entry Exists In Multiple Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_parentcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting Company Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Financial Period Close (Reporting company currency)</relationshipLabel>
        <relationshipName>glcloses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plcalcrate__c</fullName>
        <label>P &amp; L Rate As Calculated</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plcurrentearnings__c</fullName>
        <label>Calculated P&amp;L Earning(Revenue-Expenses)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_pllastbooked__c</fullName>
        <label>Date GL Txn Last Inserted For P&amp;L Acct</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plovrrideby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>P &amp; L Rate Overridden By</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Financial Period Close (P &amp; L rate overridden by)</relationshipLabel>
        <relationshipName>glcloses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plovrridedate__c</fullName>
        <label>P &amp; L Rate Overridden On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plovrriderate__c</fullName>
        <label>P &amp; L Rate As Overridden</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plratecalcneeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P &amp; L Needs To Be Recalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plratelastcalc__c</fullName>
        <label>P &amp; L Rate Last Calculated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_plrateovrridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P &amp; L Rate Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_reportingcompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial Period Close (Reporting company)</relationshipLabel>
        <relationshipName>glcloses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_reportingperiod__c</fullName>
        <label>Reporting Company Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_rolluplastrun__c</fullName>
        <label>Last Statement Account Rollup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_rollupneeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollup Needed For Statement Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_selastbooked__c</fullName>
        <label>Dates Statement Entries Last Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_stmtentriesexist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement Entries Exist For Subsidiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_subcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subsidiary Company Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Financial Period Close (Subsidiary company currency)</relationshipLabel>
        <relationshipName>glcloses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_subsidiary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial Period Close (Subsidiary company)</relationshipLabel>
        <relationshipName>glcloses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose_subsidiaryperiod__c</fullName>
        <label>Subsidiary Company Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Period Close</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Period_Close</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__glclose_glyear__c</columns>
        <columns>rstkf__glclose_reportingcompany__c</columns>
        <columns>rstkf__glclose_parentcurr__c</columns>
        <columns>rstkf__glclose_reportingperiod__c</columns>
        <columns>rstkf__glclose_glcurrentearnings__c</columns>
        <columns>rstkf__glclose_plcurrentearnings__c</columns>
        <columns>rstkf__glclose_glxlatediff__c</columns>
        <columns>rstkf__glclose_selastbooked__c</columns>
        <columns>rstkf__glclose_budgetexists__c</columns>
        <columns>rstkf__glclose_rollupneeded__c</columns>
        <columns>rstkf__glclose_gllastbooked__c</columns>
        <columns>rstkf__glclose_pllastbooked__c</columns>
        <columns>rstkf__glclose_glearningsbooked__c</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Period Close</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Period_Close_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glclose_glyear__c</columns>
        <columns>rstkf__glclose_reportingcompany__c</columns>
        <columns>rstkf__glclose_parentcurr__c</columns>
        <columns>rstkf__glclose_reportingperiod__c</columns>
        <columns>rstkf__glclose_selastbooked__c</columns>
        <columns>rstkf__glclose_budlastchanged__c</columns>
        <columns>rstkf__glclose_glcurrentearnings__c</columns>
        <columns>rstkf__glclose_bookedearningsamt__c</columns>
        <columns>rstkf__glclose_budgetexists__c</columns>
        <columns>rstkf__glclose_gllastbooked__c</columns>
        <columns>rstkf__glclose_pllastbooked__c</columns>
        <columns>rstkf__glclose_glearningsbooked__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glclose_reportingcompany__c</field>
            <operation>contains</operation>
            <value>Hello</value>
        </filters>
        <label>Financial Period Close - Filtered</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Period Close</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__bsovrrideratemustbegreaterthan0</fullName>
        <active>true</active>
        <description>Balance sheet rate as overridden must be greater than 0.</description>
        <errorConditionFormula>!ISBLANK( rstkf__glclose_bsovrriderate__c ) &amp;&amp; rstkf__glclose_bsovrriderate__c &lt;= 0</errorConditionFormula>
        <errorMessage>Balance sheet rate as overridden must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__budovrrideratemustbegreaterthan0</fullName>
        <active>true</active>
        <description>Override budget exchange rate must be greater than 0.</description>
        <errorConditionFormula>!ISBLANK(rstkf__glclose_budovrriderate__c) &amp;&amp; rstkf__glclose_budovrriderate__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>rstkf__glclose_bookedxlateddiff__c</errorDisplayField>
        <errorMessage>Override budget exchange rate must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__plovrrideratemustbegreaterthan0</fullName>
        <active>true</active>
        <description>P &amp; L rate as overridden must be greater than 0.</description>
        <errorConditionFormula>!ISBLANK( rstkf__glclose_plovrriderate__c ) &amp;&amp; rstkf__glclose_plovrriderate__c &lt;= 0</errorConditionFormula>
        <errorMessage>P &amp; L rate as overridden must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>